2009-09-01  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: On Hildon, set up MAEMO_VERSION and MAEMO_VERSION_MAJOR

	* gtkdatesel.c (ARROW_SIZE): Do not force arrow size if we are using Maemo 5
	(make_field): Support platforms which do not set ARROW_SIZE

	* main.c (main): Drop day-of-week display on hildon (note: day-of-week is 
	still shown in title bar). This undoes the change made on 2008-12-02.

2009-08-31  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: Port to libsoup2.4

	* calendar-update.c (calendar_push_internal, pushed): Port to libsoup2.4

2009-08-20  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: Add --without-libsoundgen option

	* alarm-dialog.h: Conditionalise libsoundgen use

	* alarm-dialog.c (ack_event_clicked): Conditionalise libsoundgen use

	* main.c (alarm_fired): Conditionalise libsoundgen use.
	Include gpe/soundgen.h if libsoundgen in use.

2009-04-15 Ned Ludd  <solar@gentoo.org>
	* gpe-base/gpe-calendar: globals.h 
	* Icon Dir Unification. /usr/share/gpe/pixmaps/ -> /usr/share/pixmaps/gpe/
	* Targeted for gpe-3.0 release.

2008-12-02  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (main): Set application name using g_set_application_name so that
	correct window title appears on Hildon
	(set_title): On Hildon just use date as window title as window manager adds
	"GPE Calendar"
	(main): Add day of week to toolbar (Bug 256)
	(propagate_time): Update day of week on toolbar
	(current_view_consider): Show/hide day of week depending on view

	* gtkdatesel.c (gtk_date_sel_new): Increase width of month selector

2008-12-01  Graham Cobb  <g+770@cobb.uk.net>

	* debian/postinst: add postinst script to rebuild hildon icon cache

	* debian/rules: add configuration and clean sections

	* Add pixmaps/gpe-calendar-64x64.png pixmaps/gpe-calendar-40x40.png
	
	* pixmaps/Makefile.am: create separate Makefile to generate various icons for hildon

	* configure.ac: add pixmaps/Makefile to AC_OUTPUT
